Regression: Transform Gizmos doesnt work anymore #79971

Closed
opened 2020-08-21 02:31:19 +02:00 by Julian Mohr · 28 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: ce0bcd5fbf
Worked: (newest version of Blender that worked as expected)

Short description of error
Gizmos from the Toolbar wont react (Edit and Object mode).

Exact steps for others to reproduce the error
[Based on the default startup or an attached .blend file (as simple as possible)]
2020-08-21 02-28-38.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: `ce0bcd5fbf` Worked: (newest version of Blender that worked as expected) **Short description of error** Gizmos from the Toolbar wont react (Edit and Object mode). **Exact steps for others to reproduce the error** [Based on the default startup or an attached .blend file (as simple as possible)] [2020-08-21 02-28-38.mp4](https://archive.blender.org/developer/F8798549/2020-08-21_02-28-38.mp4)
Author

Added subscriber: @Jewls

Added subscriber: @Jewls

#80020 was marked as duplicate of this issue

#80020 was marked as duplicate of this issue

Added subscriber: @sbchild

Added subscriber: @sbchild
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Philipp Oeser self-assigned this 2020-08-21 09:42:12 +02:00
Member

This should be fixed by 5f414234dd

Not 100% sure if it is in todays build, but should be in the next available then
https://builder.blender.org/download/

Will close as resolved, but feel free to comment again if issues persist in a fresh build

This should be fixed by 5f414234dd Not 100% sure if it is in todays build, but should be in the next available then https://builder.blender.org/download/ Will close as resolved, but feel free to comment again if issues persist in a fresh build
Author

@lichtwerk with a fresh pulled build right now(built time: 12:38) the issue still persists

@lichtwerk with a fresh pulled build right now(built time: 12:38) the issue still persists
Member

Cannot reproduce in 41d31e100d

@Jewls : which build hash are you testing? [bpy.app.build_hash]

Cannot reproduce in 41d31e100d @Jewls : which build hash are you testing? [`bpy.app.build_hash`]
Author

bpy.app.build_hash

b'3bc09c1c1ec9'

>>> bpy.app.build_hash b'3bc09c1c1ec9'
Member

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Thx getting back.

@fclem: could there still be a problem on Windows? (certain setups?)

Like I said, it seems to be fine here

**System Information**
Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
version: 2.91.0 Alpha, branch: master, commit date: 2020-08-21 07:19, hash: `rB41d31e100d9d`
Thx getting back. @fclem: could there still be a problem on Windows? (certain setups?) Like I said, it seems to be fine here ``` **System Information** Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits version: 2.91.0 Alpha, branch: master, commit date: 2020-08-21 07:19, hash: `rB41d31e100d9d` ```
Philipp Oeser removed their assignment 2020-08-21 15:13:39 +02:00

Can you reproduce using factory-startup? Can you reproduce using the buildbot version?

Can you reproduce using factory-startup? Can you reproduce using the buildbot version?

Added subscriber: @CobraA

Added subscriber: @CobraA

same here with the latest buildbot, previous issue of gizmos locking is fixed but now you can't interact with the axes.

same here with the latest buildbot, previous issue of gizmos locking is fixed but now you can't interact with the axes.

Added subscriber: @Pyer

Added subscriber: @Pyer

Here on WIN10 latest Blender nightly build, the gizmo works again (it didn't yesterday). You can transform when when you click on the red green blue helpers. But gimbal rotation is no longer recognized...
Blender 2020-08-21 18-01-40 (2).mp4

Here on WIN10 latest Blender nightly build, the gizmo works again (it didn't yesterday). You can transform when when you click on the red green blue helpers. But gimbal rotation is no longer recognized... [Blender 2020-08-21 18-01-40 (2).mp4](https://archive.blender.org/developer/F8800234/Blender_2020-08-21_18-01-40__2_.mp4)
Author

@fclem
on the desktop
b'3bc09c1c1ec9' doesnt work with factory settings.
And b'ce0bcd5fbf40' (buildbot) wont work either.
2020-08-21 22-13-13.mp4

but on the laptop b'ce0bcd5fbf40' works well

@fclem on the desktop b'3bc09c1c1ec9' doesnt work with factory settings. And b'ce0bcd5fbf40' (buildbot) wont work either. [2020-08-21 22-13-13.mp4](https://archive.blender.org/developer/F8801580/2020-08-21_22-13-13.mp4) but on the laptop b'ce0bcd5fbf40' works well

This issue was referenced by e26301f4d1

This issue was referenced by e26301f4d1a3f40991e7a928fa0fc912beb50ab1

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Clément Foucault self-assigned this 2020-08-22 01:42:26 +02:00
Author

Now its solved
Thanks for your effort @fclem

Now its solved Thanks for your effort @fclem

Removed subscriber: @sbchild

Removed subscriber: @sbchild

In #79971#1000463, @Jewls wrote:
Now its solved
Thanks for your effort @fclem

Not entirely. The Gimbal still isn't working for the rotation tool (see my previous post)...
This is how it worked in 2.83.5:
Blender 2020-08-22 07-13-35 (2).mp4

> In #79971#1000463, @Jewls wrote: > Now its solved > Thanks for your effort @fclem Not entirely. The Gimbal still isn't working for the rotation tool (see my previous post)... This is how it worked in 2.83.5: [Blender 2020-08-22 07-13-35 (2).mp4](https://archive.blender.org/developer/F8802522/Blender_2020-08-22_07-13-35__2_.mp4)

Added subscriber: @Adam-Iwackowski

Added subscriber: @Adam-Iwackowski

Even if it has been miraculously managed transforming to work, in overall Blender has huge performance impact. The transform lags :)

Even if it has been miraculously managed transforming to work, in overall Blender has huge performance impact. The transform lags :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

There seems to be a discrepency between windows and linux on this side. For gizmos, selection try to use the window backbuffer. On Windows, this one has a depth buffer attached to it. But on linux it seems to not have any depth attached. This might change the selection behavior.

@ideasman42 honestly, I would change this and ensure the caller always sets a correct framebuffer for selection (not the backbuffer).

There seems to be a discrepency between windows and linux on this side. For gizmos, selection try to use the window backbuffer. On Windows, this one has a depth buffer attached to it. But on linux it seems to not have any depth attached. This might change the selection behavior. @ideasman42 honestly, I would change this and ensure the caller always sets a correct framebuffer for selection (not the backbuffer).

Added subscribers: @Russ1642, @mano-wii, @jenkm

Added subscribers: @Russ1642, @mano-wii, @jenkm
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79971
No description provided.